# pypalettes

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  LICENSE.note  MANIFEST.in  README.md  coverage.sh  doc.sh  how_to_use.ipynb  index.html  make.ipynb  mkdocs.yaml  mkdocs.yml  objects.inv  palette.html  pyproject.toml  release.sh  requirements-dev.txt  requirements.py  requirements.txt  sandbox.ipynb  sandbox.py  scrape.ipynb  setup.py  sitemap.xml  t.ipynb
.github/workflows/: doc.yaml  lint.yaml  pypi.yaml  test.yaml  test.yml
docs/: README.qmd  contributing.md  examples.md  index.html  index.md  local.sh  quick_start.md  scripts.js  style.css  styles.css
docs/reference/: add_cmap.md  create_cmap.md  load_cmap.md  show_cmap.md
examples/: index.html
images/: images.py
nyancat/: create_cmap.py  palettes.csv  scrape.py  usecase.ipynb
overrides/partials/: footer.html
parsers/: README.md  list_manual_palettes.py  main.py  manual_palettes.py  matplot_and_seaborn.py  matplotlib_cmap.py  scrape_coolors.py  scrape_paletteer.py  test.py  unify.py  utils.py
purrpalette/: __init__.py  coolors.csv  core.py  create_cmap.py  matplot_and_seaborn.csv  matplotlib.csv  paletteer.csv  palettes.csv  scrape.py  usecase.ipynb  utils.py
purrpalette/tests/: test_core.py
pypalettes/: __init__.py  core.py  create.py  create_cmap.py  deprecated.py  get_colors.py  load_cmap.py  main.py  make.py  paletteer.csv  palettes.csv  palettes.json  show.py  show_cmap.py  utils.py
pypalettes/tests/: test_core.py
reference/create_cmap/: index.html
reference/load_cmap/: index.html
reference/show_cmap/: index.html
scripts/: coverage.sh
search/: search_index.json
site/: 404.html  index.html
site/quick_start/: index.html
stylesheets/: style.css
tests/: test_create_cmap.py  test_deprecated.py  test_get_hex.py  test_get_kind.py  test_get_rgb.py  test_load_cmap.py  test_load_file.py  test_make_cmap.py  test_register_cmap.py  test_show_cmap.py  test_utils.py  test_version.py
