[project]
name = "pypalettes"
version = "0.1.5"
description = "A large (+2500) collection of color maps for Python"
license-files = ["LICENSE.note"]
keywords = ["palette", "colormap", "cmap", "matplotlib", "dataviz", "visualization", "seaborn"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib"
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pypalettes"]
include-package-data = true

[tool.uv.sources]
pypalettes = { workspace = true }

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://python-graph-gallery.com/color-palette-finder/"
Issues = "https://github.com/JosephBARBIERDARNAL/pypalettes/issues"
Documentation = "https://python-graph-gallery.com/introduction-to-pypalettes/"
Repository = "https://github.com/JosephBARBIERDARNAL/pypalettes"
