[project]
name = "pypalettes"
version = "0.1.6"
description = "A large (+2500) collection of color maps for Python"
license-files = ["LICENSE.note"]
keywords = ["palette", "colormap", "cmap", "matplotlib", "dataviz", "visualization", "seaborn"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib"
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pypalettes"]
include-package-data = true

[tool.uv.sources]
pypalettes = { workspace = true }

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.5",
    "mkdocs-matplotlib>=0.10.1",
    "coverage>=7.9.1",
    "genbadge[coverage]>=1.1.2",
    "seaborn>=0.13.2",
    "plotnine>=0.14.6",
]
quarto = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
]

[project.urls]
Homepage = "https://python-graph-gallery.com/color-palette-finder/"
Issues = "https://github.com/JosephBARBIERDARNAL/pypalettes/issues"
Documentation = "https://python-graph-gallery.com/introduction-to-pypalettes/"
Repository = "https://github.com/JosephBARBIERDARNAL/pypalettes"

[tool.ruff]
extend-exclude = ["tests", "parsers"]
